update SimulationGenerator to take initial sets of decision and replacement strategies as parameters